--- a/sites/all/themes/emor/emor.libraries.yml
+++ b/sites/all/themes/emor/emor.libraries.yml
@@ -62,6 +62,7 @@ global-styling:
       css/print.css: { media: print }
   js:
     js/bootstrap.min.js: {}
+    #js/jquery-ui.min.js: {}
     js/functions.js: {}
   dependencies:
     - core/jquery
